--- a/src/AppleStore/Properties/launchSettings.json
+++ b/src/AppleStore/Properties/launchSettings.json
@@ -4,13 +4,14 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:3923/",
-      "sslPort": 0
+      "sslPort": 44322
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "http://localhost:3923/",
       "environmentVariables": {
         "Hosting:Environment": "Development"
       }
