--- a/src/AppleStore/project.json
+++ b/src/AppleStore/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
     "commands": {
         "web": "Microsoft.AspNet.Server.Kestrel",
         "myloader": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5001",
@@ -20,6 +20,7 @@
         "Microsoft.ApplicationInsights.AspNet": "1.0.0-rc1",
         "Microsoft.AspNet.Authentication.Cookies": "1.0.0-rc1-final",
         "Microsoft.AspNet.Diagnostics.Entity": "7.0.0-rc1-final",
+        "Microsoft.AspNet.Identity": "3.0.0-rc1-final",
         "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-rc1-final",
         "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
         "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
@@ -39,7 +40,8 @@
         "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
         "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-rc1-final",
         "Store.Entity": "",
-        "Store.Repository": ""
+        "Store.Repository": "",
+        "Twilio": "4.5.0"
     },
     "exclude": [
         "wwwroot",
@@ -47,6 +49,9 @@
     ],
     "frameworks": {
         "dnx451": {
+            "frameworkAssemblies": {
+                "System.Web": "4.0.0.0"
+            }
         }
     },
     "publishExclude": [
