--- a/src/AppleStore/bower.json
+++ b/src/AppleStore/bower.json
@@ -6,6 +6,7 @@
     "jquery": "2.1.4",
     "angular-animate": "1.4.6",
     "angular": "1.4.6",
-    "angular-route": "1.4.6"
+    "angular-route": "1.4.6",
+    "signalr": "~2.2.0"
   }
 }
