--- a/src/AppleStore/wwwroot/web.config
+++ b/src/AppleStore/wwwroot/web.config
@@ -5,5 +5,8 @@
       <add name="httpPlatformHandler" path="*" verb="*" modules="httpPlatformHandler" resourceType="Unspecified" />
     </handlers>
     <httpPlatform processPath="%DNX_PATH%" arguments="%DNX_ARGS%" stdoutLogEnabled="false" startupTimeLimit="3600" forwardWindowsAuthToken="true" />
+    <security>
+        <requestFiltering allowDoubleEscaping="true"/>
+    </security>
   </system.webServer>
 </configuration>
